<resources>
    <string name="app_name">DogApp</string>
    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="rightAddress">La mejor aplicación para visualizar las razas.</string>
    <string name="qulity">¡Ahora es muy fácil alcanzar la mejor calidad de visualización de tus razas en la palma de tu mano!</string>
    <string name="register">Registrar</string>
    <string name="login">Login</string>
    <string name="start">Comencemos</string>
    <string name="goLogin">¡Vamos a ingresar!</string>
    <string name="goNotAcount">¿No tienes una cuenta? Registro</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="goRegister">¡Vamos a registrarnos!</string>
    <string name="haveAcount">¿Ya tienes una cuenta? ingresar</string>
    <string name="name">Digite su nombre completo</string>
    <string name="number_version">version 1.0</string>
    <string name="regional">Regional</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Salir</string>
    <string name="digit_email">Digite su correo electronico</string>
    <string name="breeds">Razas</string>
    <string name="search_breed">Buscar Raza</string>
    <string name="image_logo">Imagen del logo</string>
    <string name="introduction_image">Imagen de la intraducción</string>
    <string name="back_image">Imagen para el back</string>
    <string name="image_logout">Imagen para el logout</string>
    <string name="exit_image">Imagen exit</string>
    <string name="arrow_image">Imagen para el arrow</string>
    <string name="race_image">Imagen Raza</string>
    <string name="breed">Raza</string>
    <string name="detail_breed">Detalle de la raza</string>
    <string name="map_breed">Imagen del perro</string>
    <string name="name_breed">Nombre de la raza</string>
    <string name="no_connection">No hay conexión a internet</string>
</resources>