<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.options.">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settings"
                style="@style/TextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/settings"
                android:textSize="@dimen/text_medium_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/settings">

                <ImageView
                    android:id="@+id/imageUser"
                    android:layout_width="@dimen/layout_width_large"
                    android:layout_height="@dimen/layout_height_large"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/image_logout"
                    android:src="@drawable/ic_logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/regional"
                style="@style/MediumTextViewThin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium_large"
                android:text="@string/regional"
                android:textColor="@color/black"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/constraintProfile" />

            <LinearLayout
                android:id="@+id/linearLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/regional">

                <ImageView
                    android:layout_width="@dimen/dimen_layout_width"
                    android:layout_height="@dimen/dimen_layout_height"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/settings_items_background"
                    android:backgroundTint="#ff5823"
                    android:contentDescription="@string/exit_image"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/logout"
                    style="@style/TextColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/arrow_image"
                    android:src="@drawable/ic_arrow"
                    app:tint="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/number_version"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                app:layout_constraintBottom_toBottomOf="@id/guideline2"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/linearLogOut" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>