<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/imageClose"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/searchCharacter"
                    style="@style/TextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/detail_breed"
                    android:textSize="@dimen/text_medium_large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/space_medium"
            android:src="@drawable/ic_close"
            app:civ_circle_background_color="@color/mint_green"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            style="@style/CardViewStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_height_large"
            android:layout_margin="40dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/toolbarBreed">

            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center"
                android:contentDescription="@string/map_breed"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium_large"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/cvImage">

            <TextView
                android:id="@+id/nameBreed"
                style="@style/h3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_breed"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/space_medium"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/linearName" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>